--- a/views/super_hero.erb
+++ b/views/super_hero.erb
@@ -13,38 +13,38 @@
   <p>
     <h2>Hero 1</h2>
     <label>Hero's Name</label>
-    <input type="text" id="member1_name" name="team[members][][name]" >
+    <input type="text" name="team[members][0][name]" >
     <br>
     <label>Hero's Power</label>
-    <input type="text" id="member1_power" name="team[members][][power]" >
+    <input type="text" name="team[members][0][power]" >
     <br>
     <label>Hero's Biography</label>
-    <input type="text" id="member1_bio" name="team[members][][bio]" >
+    <input type="text" name="team[members][0][bio]" >
   </p>
 
   <p>
     <h2>Hero 2</h2>
     <label>Hero's Name</label>
-    <input type="text" id="member2_name" name="team[members][][name]" >
+    <input type="text" name="team[members][1][name]" >
     <br>
     <label>Hero's Power</label>
-    <input type="text" id="member2_power" name="team[members][][power]" >
+    <input type="text" name="team[members][1][power]" >
     <br>
     <label>Hero's Biography</label>
-    <input type="text" id="member2_bio" name="team[members][][bio]" >
+    <input type="text" name="team[members][1][bio]" >
   </p>
 
   <p>
     <h2>Hero 3</h2>
     <label>Hero's Name</label>
-    <input type="text" id="member3_name" name="team[members][][name]" >
+    <input type="text" name="team[members][2][name]" >
     <br>
     <label>Hero's Power</label>
-    <input type="text" id="member3_power" name="team[members][][power]" >
+    <input type="text" name="team[members][2][power]" >
     <br>
     <label>Hero's Biography</label>
-    <input type="text" id="member3_bio" name="team[members][][bio]" >
+    <input type="text" name="team[members][2][bio]" >
   </p>
 
-  <input type="submit" name="submit" value="submit">
+<button type="submit" name="submit">Submit</button>
 </form>
